--- a/assets/product.css
+++ b/assets/product.css
@@ -3,30 +3,43 @@
 	font-size: 15px;
 
 }
-.main
+.breadcrumb
 {
-	width: 600px;
-	height: 600px;
-	padding: 30px;
-
+	font-size: 20px;
+	text-align: center;
+	background-color: white;
 }
-.preview
+/*************************/
+.main/*商品頁主圖*/
+{
+	width: 550px;
+	height: 550px;
+	padding: 30px;
+	padding:50px;
+	transform:scale(1,1);
+	transition: all 1s ease-out;
+}
+.main:hover{
+  transform:scale(1.2,1.2);
+}
+.preview/*預覽小圖*/
 {
 	width: 100px;
 	height: 100px;
 	border:2px solid;
 	position: relative;
 	right: -250px;
+	transform:scale(1,1);
+	transition: all 1s ease-out;
 }
-.preview:horver
-{
-	
+.preview:horver{
+	transform:scale(1.2,1.2);
 }
 
-.information
+.information h1
 {
-	margin-left:30px; 
-
+  font-size:40px;
+  color:green;
 }
 /*************************/
 .Page
