--- a/assets/commodity.css
+++ b/assets/commodity.css
@@ -15,32 +15,12 @@
 }
 
 /*article****************************/
-.top-container {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-.header {
-  padding: 10px 16px;
-  background: #555;
-  color: #f1f1f1;
-}
-.content {
-  padding: 16px;
-}
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-.sticky + .content {
-  padding-top: 102px;
-}
 /**/
-body {
-  font-family: "Lato", sans-serif;
+.tit
+{
+  color: red;
+  font size: 30px;
 }
-
 .sidebar {
   height: 100%;
   width: 0;
@@ -62,11 +42,9 @@ body {
   display: block;
   transition: 0.3s;
 }
-
 .sidebar a:hover {
   color: #f1f1f1;
 }
-
 .sidebar .closebtn {
   position: absolute;
   top: 0;
@@ -74,30 +52,23 @@ body {
   font-size: 36px;
   margin-left: 50px;
 }
-
-.openbtn {
+.openbtn {          /*側邊欄位黑框*/
   font-size: 20px;
   cursor: pointer;
   background-color: #111;
   color: white;
-  padding: 10px 15px;
   border: none;
+  padding: 5px 10px;
 }
-
 .openbtn:hover {
   background-color: #444;
 }
-
 #main {
   transition: margin-left .5s;
-  padding: 16px;
+  padding-top:0px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
+
 /**/
 .item img
 {
