--- a/assets/index.css
+++ b/assets/index.css
@@ -165,6 +165,10 @@ nav
 /*aside*****************************************/
 
 /******************************************/
+footer
+{
+  background-color: #DDDDDD;
+}
 footer p
 {
 	text-align: center;
@@ -177,5 +181,12 @@ footer p
   margin-left: 10%;
   margin-top:4%;
   margin-bottom: 1%;
+}
 
+.DIV1{
+flex:2
+}
+
+.DIV2{
+flex:10
 }
