--- a/assets/commodity.css
+++ b/assets/commodity.css
@@ -15,7 +15,7 @@
 }
 
 /*article****************************/
-/**/
+/*麵包屑、側邊欄位＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊*/
 .tit
 {
   color: red;
@@ -68,8 +68,7 @@
   padding-top:0px;
 }
 
-
-/**/
+/************************************/
 .item img
 {
   width: 300px;
@@ -114,24 +113,28 @@ a/*超連結*/
   text-decoration:none;
   color: black;
 }
+
 /******************************back to top*/
 #myBtn {
+  float: right;
   display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
-  border: none;
+  font-size: 16px;
+  border-radius: 40%;
   outline: none;
-  background-color: red;
+  background-color:black;
   color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
+  width: 60px;
+  height: 60px;
 
 #myBtn:hover {
-  background-color: #555;
+  background-color:red;
 }
 /*換頁bar*/
 
