--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -64,6 +64,11 @@
 {
   font-size:40px;
   color:green;
+  font-family: cursive;
+}
+.information
+{
+  font-family: cursive;
 }
 .hope_btn
 {
@@ -165,8 +170,47 @@
 {
   color: black;
 }
-/*評論*/
+/*comment*/
+.input1
+{
+  width: 100px;
+  height: 30px;
+}
 
+/*星星*/
+.star-rating {
+  display:flex;
+  flex-direction: row-reverse;
+  font-size:50px;
+  justify-content:space-around;
+  padding:0 .2em;
+  text-align:center;
+  width:5em;
+  margin-left: 60px;
+}
+
+.star-rating input {
+  display:none;
+}
+
+.star-rating label {
+  color:#ccc;
+  cursor:pointer;
+}
+
+.star-rating :checked ~ label {
+  color:#f90;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+  color:#fc0;
+}
+.star img
+{
+  width: 30px;
+  height: 30px;
+}
 /**/
 .Page
 {
