--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -273,26 +273,45 @@ footer
 }
 footer p
 {
-	text-align: center;
-	margin-bottom: 1%;
+   padding: 1px;
+   font-size: 15px;
+
 }
 .button_logo
 {
-  width: 200px;
-  height: 150px;
+  width: 300px;
+  height: 225px;
   margin-left: 10%;
   margin-top:4%;
   margin-bottom: 1%;
 }
-
-.DIV1{
-flex:3
+footer table
+{
+  width: 1300px;
+  height: 300px;
+  margin: auto;
+  margin-bottom: 2%;
+  padding: 10px;
 }
 
-.DIV2{
-flex:5
+footer h6
+{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 200;
+  font-style: italic;
 }
 
-.DIV3{
-flex:4
+.foot_icon
+{
+  width: 40px;
+  height: 40px;
 }
+
+.fact_logo
+{
+  width: 240px;
+  height: 180px;
+  padding: 10px;
+}
+
