--- a/assets/css/hot.css
+++ b/assets/css/hot.css
@@ -116,3 +116,19 @@ article
 .card2 button:hover {
   opacity: 0.7;
 }
+.btn 
+{
+  height: 50px;
+  font-size: 25px;
+  width: 160px;
+}
+.watch
+{
+  width: 60px;
+  height: 50px;
+  height: 50px;
+  width: 60px;
+  padding: 5px;
+  color:white;
+  background-color: black;
+}
