--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -4,6 +4,9 @@
 	text-align: center;
 	background-color: white;
 }
+body{
+  background-color:#FFFAFA;
+}
 /*圖片預覽************************/
 .column {
 	width: 200px;
@@ -68,6 +71,10 @@
 }
 .information
 {
+  font-size: 25px;
+}
+.information
+{
   font-family: cursive;
 }
 .hope_btn
@@ -103,6 +110,33 @@
   background-color:	#0000FF;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+/*數量加減*/
+.qty {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  border: 0;
+  border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+}
+
+input.qtyplus {
+  width: 50px;
+  height: 60px;
+  border: 3px solid #aaa;
+  background: #f8f8f8;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+input.qtyminus {
+  width: 50px;
+  height: 60px;
+  border: 3px solid #aaa;
+  background: #f8f8f8;
+  font-weight: 600;
+  font-size: 30px;
 }
 /**tab選項**********************************************/
 /* Style the tab */
