--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,4 @@
+
 body
 {
 	background-color:white;
@@ -38,6 +39,25 @@ body
   padding: 10px;
 }
 /*search bar***************************************/
+.butsearch
+{
+  background-color: white;
+  width: 70px;
+  height: 70px;
+}
+.butsearch img
+{
+  width: 50px;
+  height: 50px;
+  position: relative;
+  right: 10px;
+}
+.searchinput
+{
+  width:210px;
+  height: 50px;
+  font-size: 20px;
+}
 input[type=text] {
   width: 130px;
   box-sizing: border-box;
@@ -314,4 +334,9 @@ footer h6
   height: 180px;
   padding: 10px;
 }
-
+.countpeople
+{
+  font-size: 17px;
+  font-weight: 100;
+  color: gray;
+}
